--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,7 +17,11 @@
     </div>
 
     <div id="jump">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M246.6 470.6c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 402.7 361.4 265.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-160 160zm160-352l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 210.7 361.4 73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path
+                d="M246.6 470.6c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 402.7 361.4 265.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-160 160zm160-352l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 210.7 361.4 73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3z" />
+        </svg>
     </div>
 
     <div id="featured">
@@ -36,13 +40,17 @@
     </div>
 
     <div id="locations">
-        <h2>Locations</h2>
         <div class="split">
             <div>
+                <h2>Locations</h2>
                 <ul>
-                    <li>1. Mount Pleasant. 2 miles away</li>
-                    <li>2. Midland. 26 miles away</li>
-                    <li>3. Lansing. 60 miles away</li>
+                    {% if top_3_closest %}
+                    {% for location, distance in top_3_closest %}
+                    <li>{{ location }} - {{ distance }} miles</li>
+                    {% endfor %}
+                    {% else %}
+                    <li>No other locations found</li>
+                    {% endif %}
                 </ul>
             </div>
             <div>
