--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
-    <h3 href="/about">About</h3>
-    <h3 href="/privacypolicy">Privacy Policy</h3>
-    <h3 href="/menu">Menu</h3>
-    <h3 href="/login">Login/Order</h3>
+    <h3><a href="/about">About</a></h3>
+    <h3><a href="/privacypolicy">Privacy Policy</a></h3>
+    <h3><a href="/menu">Menu</a></h3>
+    <h3><a href="/login">Login/Order</a></h3>
 </footer>
