--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,21 +11,21 @@
 <body>
     {% include 'header.html' %}
 
-    <div class="login-container">
-        <h2>Login</h2>
-        {% if message %}
-        <p class="error-message">{{ message }}</p>
-        {% endif %}
-        <form action="{{ url_for('login') }}" method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Login</button>
-        </form>
-    </div>
-    {% include 'footer.html' %}
+        <div class="form-wrapper">
+            <h2>Login</h2>
+            {% if message %}
+            <p class="error-message">{{ message }}</p>
+            {% endif %}
+            <form action="{{ url_for('login') }}" method="post">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Login</button>
+            </form>
+        </div>
 
+    {% include 'footer.html' %}
 </body>
 
 </html>
