--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,12 @@
                 d="M246.6 470.6c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 402.7 361.4 265.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-160 160zm160-352l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L224 210.7 361.4 73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3z" />
         </svg>
     </div>
+    <script>
+        document.getElementById("jump").onclick = function () {
+            window.location.href = "#featured";
+        };
+    </script>
+
 
     <div id="featured">
         <div id="featured-text">
@@ -53,9 +59,7 @@
                     {% endif %}
                 </ul>
             </div>
-            <div>
-                <img src="/static/map.png" />
-            </div>
+            <img src="/static/map.png" />
         </div>
     </div>
 
