--- a/src/static/style.css
+++ b/src/static/style.css
@@ -103,7 +103,7 @@ h2 {
   margin: 3rem auto;
   border-radius: 1rem;
   box-shadow: 0.5em 0.5em var(--black);
-  height: calc(100dvh - 20rem - 2 * var(--medium-height));
+  min-height: calc(100dvh - 20rem - 2 * var(--medium-height));
 }
 
 .form-wrapper h2 {
@@ -172,14 +172,14 @@ h2 {
 }
 
 .dashboard-section-content {
-  height: 0%;
+  max-height: 0;
+  padding: 0; 
   overflow: hidden;
-  transition: height 0.6s ease;
+  transition: max-height 0.6s ease, padding 0.6s ease;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   background-color: var(--white);
-  padding: 1rem; 
-
+  
 }
 
 .dashboard-section.active {
@@ -193,7 +193,9 @@ h2 {
 }
 
 .dashboard-section.active > .dashboard-section-content {
-  height: 100%; 
+  max-height: 5000px; 
+  padding: 1rem;
+  
   display: block;
 
 }
