More fillter pages

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -4,7 +4,7 @@
     </a>
     <div class="header-right">
         <h3><a href="/about">About</a></h3>
-        <h3><a href="/Menu">Menu</a></h3>
+        <h3><a href="/menu">Menu</a></h3>
         {% if user_location and nearest_location_name %}
         <div class="header-right" style="gap: 1rem; min-width: 20rem;">
             <svg id="location-ping" xmlns="http://www.w3.org/2000/svg"
