--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -18,9 +18,9 @@
             {% endif %}
             <form action="{{ url_for('login') }}" method="post">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" placeholder="Username" required>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
         </div>
