Background image fix

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -81,6 +81,9 @@ h2 {
 #opening {
   background-image: url("/static/banner.png");
   height: var(--big-height);
+  background-position: center;
+  background-size: cover; 
+  
 }
 
 #opening > h1 {
