--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -23,6 +23,10 @@
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <button type="submit">Login</button>
             </form>
+            <p>To login as a test user use the following credentials</p>
+            <p>Customer: customer1/password1</p>
+            <p>Staff: staff1/password1</p>
+            <p>Manager: manager1/password1</p>
         </div>
 
     {% include 'footer.html' %}
